Final project report iPython notebook format

--- a/Analyzing the NYC Subway Dataset.ipynb
+++ b/Analyzing the NYC Subway Dataset.ipynb
@@ -253,7 +253,7 @@
     "   ### 1.2 Statistical Test Applicability\n",
     "   Mann-Whitney U-Test  tests null hypothesis that two samples come from same population. Also, one of the assumptions to use this test is that we have independence of observations for our datasets.\n",
     "   \n",
-    "   Our dataset statify these assumptions. We will use this test by dividing complete dataset into two dataframes:\n",
+    "   Our dataset statisfy these assumptions. We will use this test by dividing complete dataset into two dataframes:\n",
     "   Entries with Rain and Entries without Rain\n",
     "   And there will be no overlap in above datasets.  \n",
     "   \n",
@@ -402,7 +402,7 @@
     " \n",
     " Apart from rain, we selected meantempi,mintempi and maxtempi as features for our model. If temp is too high or low, people will  feel more comfortable riding subway.\n",
     " \n",
-    " Hour is chose because if its office hours/rush hours ridership will be high.\n",
+    " Hour is selected because if it is office hours/rush hours ridership will be high.\n",
     "\n",
     " "
    ]
@@ -496,7 +496,7 @@
    "source": [
     "### 2.6 Goodness of Regression Model\n",
     "Higher the R^2 value towards the 1, better the model fits the data.\n",
-    "Our R^2 value is little lower side. Due categorical nature of data Linear model may not be better fit."
+    "Our R^2 value is little lower side. Due to categorical nature of data Linear model may not be better fit."
    ]
   },
   {
@@ -507,7 +507,7 @@
     "\n",
     " ### 3.1 Histogram of ENTRIESn_hourly distribution  \n",
     " Distribution for ENTRIESn_hourly ridership is plotted using matplotlib.pyplot.\n",
-    " We can distribution is not normally distributed."
+    " We can see distribution is not normally distributed."
    ]
   },
   {
